# ROB521

./: .gitignore  README.md
Assignments/Assignment 1/: MinDist2Edges.m  ROB521_assignment1.m  maze.m
Assignments/Assignment 1/Matlab/: Dist2Poly.m  MinDist2Edges.m  README.txt  ROB521_assignment1.m  maze.asv  maze.m  show_maze.m  test.m  untitled.m
Assignments/Assignment 1/Python/: AStar.py  AffineIntersect.py  CheckCollision.py  EdgeCollision.py  EdgePtsToVec.py  MinDist2Edges.py  PRM.py  ROB521_Assignment1.py  maze.py  show_maze.py  test.py
Assignments/Assignment 1/Python/cython/: AffineIntersect2.c  EdgeCollision2.c  (+11 more)
Assignments/Assignment 2/Matlab/: ROB521_assignment2.m
lab1/: CMakeLists.txt
lab2/launch/: myhal_map_view.launch
lab2/maps/: myhal.pgm  myhal.yaml
lab2/nodes/: l2_follow_path.py  l2_follow_path_myhal.py  l2_planning.py  pygame_utils.py  shortest_path_myhal.npy
labs/lab1/: package.xml
labs/lab1/nodes/: l1_motor.py  l1_odometry.py
labs/lab2/launch/: myhal.launch
labs/lab2/maps/: myhal.yaml
labs/lab2/nodes/: l2_follow_path.py  l2_follow_path_myhal.py  l2_planning.py  pygame_utils.py  shortest_path.npy  shortest_path_rrt.npy  shortest_path_rrtstar.npy  shortest_path_rrtstar_myhal.npy  test.py
labs/lab2/worlds/: myhal.world
labs/lab3/: motion_estimate.bag  package.xml  sample_data.bag
labs/lab3/launch/: mapping_rviz.launch  wheel_odom_rviz.launch
labs/lab3/nodes/: .l2_estimate_wheel_radius.py.swp  .l3_estimate_wheel_baseline.py.swo  .l3_estimate_wheel_baseline.py.swp  l1_motor.py  l3_estimate_robot_motion.py  l3_estimate_wheel_baseline.py  l3_estimate_wheel_radius.py  l3_mapping.py  l3_plot_motion_estimate.py  runcommand.txt
